tests/parse/ui/parenthesis.stderr
error: not matching parenthesis
 --> $DIR/parenthesis.rs:8:12
  |
8 | #[requires="(true"]
  |            ^^^^^^^

error: not matching parenthesis
  --> $DIR/parenthesis.rs:11:12
   |
11 | #[requires="true)"]
   |            ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:14:21
   |
14 | #[requires="   (    12345)"]
   |                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:17:21
   |
17 | #[requires="   (    12345 && (
   |                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:20:19
   |
20 |         (false && 1234 || 
   |                   ^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

